--- a/docs/config.json
+++ b/docs/config.json
@@ -25,6 +25,20 @@
     {
       "quadrant": 3,
       "ring": 0,
+      "label": "Planio",
+      "active": true,
+      "moved": 0
+    },
+    {
+      "quadrant": 3,
+      "ring": 0,
+      "label": "StoriesOnBoard",
+      "active": true,
+      "moved": 0
+    },
+    {
+      "quadrant": 3,
+      "ring": 0,
       "label": "Weblate",
       "active": true,
       "moved": 0
@@ -32,7 +46,7 @@
     {
       "quadrant": 3,
       "ring": 3,
-      "label": "Sonar",
+      "label": "SonarQube",
       "active": true,
       "moved": 0
     },
@@ -40,6 +54,13 @@
       "quadrant": 2,
       "ring": 0,
       "label": "Scrum",
+      "active": true,
+      "moved": 0
+    },
+    {
+      "quadrant": 2,
+      "ring": 1,
+      "label": "Technology Radar",
       "active": true,
       "moved": 0
     },
@@ -87,16 +108,23 @@
       "moved": 0
     },
     {
-      "quadrant": 1,
+      "quadrant": 0,
       "ring": 0,
       "label": "DSpace 6.3",
       "active": true,
       "moved": 0
     },
     {
-      "quadrant": 1,
-      "ring": 2,
+      "quadrant": 0,
+      "ring": 1,
       "label": "DSpace 7",
+      "active": true,
+      "moved": 0
+    },
+    {
+      "quadrant": 0,
+      "ring": 1,
+      "label": "OpenSearch",
       "active": true,
       "moved": 0
     },
